--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Section</title>
-    <link rel="stylesheet" href="./output.css">
+    <link rel="stylesheet" href="./dist/output.css">
     <style>
         @keyframes spin360 {
           from {
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div id="assignment" class=" h-96 bg-purple-950 px-12 py-6" >
-        <h1 class=" text-white uppercase text-lg font-semibold max-lg:text-sm">our services</h1>
+        <h1 class=" text-white uppercase text-lg font-semibold ">our services</h1>
         <div class=" h-full w-full flex justify-between mt-8">
             <div class=" bg-white h-3/4 w-1/5 hover:animate-spin360 text-center px-6 flex flex-col justify-between py-8 ">
                 <h1 class="capitalize font-bold">emergency plumbing services</h1>
